<?xml version="1.0" encoding="utf-8"?>
<resources>
    <!-- Name for the application [CHAR LIMIT=12] -->
    <string name="app_name">Inventory Storage</string>

    <!-- Label for overflow menu option that inserts fake inventory data into the app [CHAR LIMIT=20] -->
    <string name="action_insert_dummy_data">Insert Dummy Data</string>

    <!-- Label for overflow menu option that deletes all inventory data in the app [CHAR LIMIT=20] -->
    <string name="action_delete_all_entries">Delete All Inventory</string>

    <!-- Title text for the empty view -->
    <string name="empty_view_title_text">No Inventory</string>

    <!-- Subtitle text for the empty view that prompts the user to add inventory [CHAR LIMIT=50] -->
    <string name="empty_view_subtitle_text">Get started by adding inventory</string>

    <!-- Title for the activity to add a new inventory [CHAR LIMIT=20] -->
    <string name="editor_activity_title_new_inventory">Add Inventory</string>

    <!-- Title for the activity to edit an existing inventory [CHAR LIMIT=20] -->
    <string name="editor_activity_title_edit_inventory">Edit Inventory</string>

    <!-- Label for editor menu option to save inventory and leave editor [CHAR LIMIT=20] -->
    <string name="action_save">Save</string>

    <!-- Label for editor overflow menu option that deletes the current inventory [CHAR LIMIT=20] -->
    <string name="action_delete">Delete</string>

    <!-- Toast message in editor when new inventory has been successfully inserted [CHAR LIMIT=NONE] -->
    <string name="editor_insert_inventory_successful">Inventory saved</string>

    <!-- Toast message in editor when new inventory has failed to be inserted [CHAR LIMIT=NONE] -->
    <string name="editor_insert_inventory_failed">Error with saving inventory</string>

    <!-- Toast message in editor when current inventory was successfully updated [CHAR LIMIT=NONE] -->
    <string name="editor_update_pet_successful">Inventory updated</string>

    <!-- Toast message in editor when current inventory has failed to be updated [CHAR LIMIT=NONE] -->
    <string name="editor_update_pet_failed">Error with updating inventory</string>

    <!-- Dialog message when user is leaving editor but hasn't saved changes [CHAR LIMIT=NONE] -->
    <string name="unsaved_changes_dialog_msg">Discard your changes and quit editing?</string>

    <!-- Dialog button text for the option to discard a user's changes [CHAR LIMIT=20] -->
    <string name="discard">Discard</string>

    <!-- Dialog button text for the option to keep editing the current inventory [CHAR LIMIT=20] -->
    <string name="keep_editing">Keep Editing</string>

    <!-- Toast message in editor when current inventory was successfully deleted [CHAR LIMIT=NONE] -->
    <string name="editor_delete_inventory_successful">Inventory deleted</string>

    <!-- Toast message in editor when current inventory has failed to be deleted [CHAR LIMIT=NONE] -->
    <string name="editor_delete_inventory_failed">Error with deleting inventory</string>

    <!-- Dialog message to ask the user to confirm deleting the current inventory [CHAR LIMIT=NONE] -->
    <string name="delete_dialog_msg">Delete this inventory?</string>

    <!-- Dialog button text for the option to confirm deleting the current inventory [CHAR LIMIT=20] -->
    <string name="delete">Delete</string>

    <!-- Dialog button text for the option to cancel deletion of the current inventory [CHAR LIMIT=20] -->
    <string name="cancel">Cancel</string>

    <!-- Label for overview category of attributes in the editor [CHAR LIMIT=30] -->
    <string name="category_overview">Overview</string>

    <!-- Label for measurement information in the editor [CHAR LIMIT=30] -->
    <string name="category_measurement">Measurement</string>

    <!-- Text hint for name field in the editor [CHAR LIMIT=30] -->
    <string name="hint_inventory_name">Name</string>

    <!-- Text hint for name field in the editor [CHAR LIMIT=30] -->
    <string name="hint_price">Price</string>

    <!-- Text hint for name field in the editor [CHAR LIMIT=30] -->
    <string name="hint_quantity">Quantity</string>

    <!-- Text hint for name field in the editor [CHAR LIMIT=30] -->
    <string name="hint_supplier_name">Supplier Name</string>

    <!-- Text hint for name field in the editor [CHAR LIMIT=30] -->
    <string name="hint_supplier_phone">Supplier Phone</string>
    <string name="product_name">Product Name</string>
    <string name="price_label">Price</string>
    <string name="quantity">Quantity</string>
    <string name="supplier_name">Supplier Name</string>
    <string name="supplier_phone_number">Supplier Phone Number</string>
    <string name="add_inventory">Add Inventory</string>
    <string name="remove_item">Remove item</string>
    <string name="add_item">Add item</string>
    <string name="sale">Sale</string>
    <string name="order">Order</string>
    <string name="order_more">Order More</string>
    <string name="product_name_required">Product name is required</string>
    <string name="price_is_required">Price is required</string>
    <string name="quntity_is_requried">Quantity is required</string>
    <string name="supplier_name_required">Supplier Name is required</string>
    <string name="supplier_phone">Supplier phone is required</string>
</resources>